# ComfyUI-ZImagePowerNodes

./: README.md  __init__.py  pyproject.toml
.github/: FUNDING.yml
docs/: empty_zimage_latent_image.md  save_image.md  style_prompt_encoder.md  style_string_injector.md  zsampler_turbo.md
nodes/: illustration_style_prompt_encoder.py  photo_style_prompt_encoder.py  save_image.py  server.py  style_prompt_encoder.py  style_string_injector.py  zsampler.py  zsampler_turbo.py
nodes/core/: node_helpers.py  progress_bar.py
nodes/deprecated_nodes/: illustration_style_prompt_encoder.py  photo_style_prompt_encoder.py
nodes/lib/: helpers.py  progress_bar.py  style_group.py  system.py
nodes/styles/: base.py  illustration_styles.py  photo_styles.py  predefined_styles.py  predefined_styles_v080.py  predefined_styles_v090.py  style_group.py  styles_by_category.py  styles_by_category_v080.py
web/js/: style_category_selector.js
workflows/: README.md  define_custom_styles.json  illustration-style-prompt-encoder_GGUF.json  photo-style-prompt-encoder_GGUF.json  style_string_injector.json  z-image_turbo_main_workflow.json
workflows/__dev__/: evaluate_style.json  nodes_used_to_copy_paste.json  save_image_subgraph_bug.json
workflows/deprecated/: illustration_style_prompt_encoder-ST.json  illustration_style_prompt_encoder.json  photo_style_prompt_encoder-ST.json  photo_style_prompt_encoder.json
workflows/development/: save_image_experimental_tag.json  style_tester.json
workflows/safetensors_versions/: define_custom_styles-ST.json  inject_style_into_string-ST.json  (+1 more)
